--- a/index2.html
+++ b/index2.html
@@ -103,12 +103,9 @@ function searchText() {
 
 </div>       
 
+<br>
 <br><br>
-<img border="0" src="1.jpg" width="3440" height="3440"><br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
+<img border="0" src="1.jpg" width="500" height="500" align="left"><br><br>
 <br><br>
 <br><br>
 <br><br>
@@ -141,7 +138,13 @@ function searchText() {
 
 <br><br>
 <p>&nbsp;</p>
-<p><img border="0" src="images/1.jpg" width="3440" height="3440"></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 </body>
