--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function searchText() {
 
     queryUrl[7] = new Array("www.google.co.kr/search?hl=ko&q=",1); 
 
-    queryUrl[10] = new Array("dic.naver.com/search.nhn?target=dic&query=",2); 
+    queryUrl[10] = new Array("dict.naver.com/dict.search?query=",2); 
 
 
     siteName = new Array(18); 
